--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Maryna Hlushak hlushak.m.v@gmail.com",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.8",
